test/types/string/assignToChar/testCall.5.good
Helpers.chpl:20: In function 'testCall':
Helpers.chpl:24: error: unresolved call 'foo("a")'
Helpers.chpl:21: note: this candidate did not match: foo(y: int(8))
Helpers.chpl:24: note: because actual argument #1 with type 'string'
Helpers.chpl:21: note: is passed to formal 'y: int(8)'
Helpers.chpl:24: note: did you mean to call '.toByte()'?
  testCall.chpl:14: called as testCall(param strBytes = "a", type toType = int(8))
